--- a/javascript-skeleton-example/styles.css
+++ b/javascript-skeleton-example/styles.css
@@ -32,25 +32,20 @@ body {
   gap: 20px;
 }
 
-.name {
+.text_name {
   width: 300px;
   height: 20px;
   border-radius: 1rem;
   text-align: center;
 }
 
-.profile .name {
+.profile .text_name {
   font-size: 20px;
   letter-spacing: -0.5px;
   height: min-content;
 }
 
-.name span {
-  font-weight: semi-bold;
-  color: #5e5e5e;
-}
-
-.description {
+.text_description {
   width: 500px;
   height: 50px;
   border-radius: 1rem;
@@ -59,20 +54,20 @@ body {
   letter-spacing: -1px;
 }
 
-.profile .description {
+.profile .text_description {
   width: 500px;
   height: min-content;
 }
 
-.description p {
+.text_description p {
   font-size: 18px;
   margin: 0;
   letter-spacing: -0.5px;
 }
 
 .image {
-  width: 512px;
-  height: 512px;
+  width: 256px;
+  height: 256px;
   border-radius: 100%;
   padding: 4px;
 }
